<resources>
    <string name="app_name">Eventos</string>
    <string name="title_home">Home</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="title_map">Map</string>
    <string name="title_activity_maps_fragment">MapsFragment</string>
    <string name="title_activity_cadastro_eventos">CadastroEventosActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTER</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="icon_location">Icon Location</string>
    <string name="icon_hour">Icon Hour</string>
    <string name="icon_title">Icon Title</string>
    <string name="description">Description</string>
    <string name="close_event_register">Close Event Register</string>
    <string name="day">Day</string>
    <string name="number_day">00</string>
    <string name="month">Month</string>
    <string name="hour_event">00:00</string>
    <string name="title_event">Event Title</string>
    <string name="define_hour_event">Set Time</string>
    <string name="description_event">Event Description</string>
    <string name="register_event_sucess">Event registered successfully!</string>
    <string name="register_user_sucess">User registered successfully!</string>
    <string name="fill_incomplete">Fill all the fields!</string>
    <string name="user_name">Username</string>
    <string name="config">Settings</string>
    <string name="my_tickets">My tickets</string>
    <string name="personal_data">My data</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOG OUT</string>
    <string name="free_account">Create your free account</string>
    <string name="have_account">I ALREADY HAVE AN ACCOUNT</string>
    <string name="join_community">join our community</string>
    <string name="back_button">&lt;</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="go_button">&gt;</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="search_here">Search here...</string>
    <string name="title_ticket">Ticket</string>
    <string name="purchase_ticket_success">Ticket purchased for the event: </string>
    <string name="define_date_event">Set Date</string>
    <string name="contact">Contact: phone number or email</string>
    <string name="nameCont">Contact name</string>
    <string name="purchase_ticket">Do you want to buy a ticket for this event?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="use_location">Use my location</string>
    <string name="populate_list_event_fail">Failed to load events!</string>
    <string name="ticket_empty">You do not have tickets!</string>
    <string name="event_empty">There are no events available at the moment.</string>
    <string name="ticket_logout">Please, log in to view your tickets.</string>
</resources>
