<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.atividadeavaliativa1.MainActivity">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icons8_home_50"
        android:title="@string/title_home"
        android:onClick="onMenuOptionsItemSelected"/>
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/icons8_map_50"
        android:title="@string/title_map"
        android:onClick="onMenuOptionsItemSelected"/>

    <item  android:id="@+id/navigation_ticket"
        android:icon="@drawable/icons8_two_tickets_50"
        android:title="@string/title_tickets"
        android:onClick="onMenuOptionsItemSelected"/>

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/icons8_chat_50"
        android:title="@string/title_chat"
        android:onClick="onMenuOptionsItemSelected"/>


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icons8_customer_50"
        android:title="@string/title_profile"

        android:onClick="onMenuOptionsItemSelected"/>


</menu>