<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.atividadeavaliativa1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.atividadeavaliativa1.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.atividadeavaliativa1.ui.perfil.PerfilFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.example.atividadeavaliativa1.ui.notifications.NotificationsFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/activity_cadastro"
        android:name="com.example.atividadeavaliativa1.user.Activity_cadastro"
        android:label="activity_cadastro"
        tools:layout="@layout/activity_cadastro" />
    <activity
        android:id="@+id/activity_login"
        android:name="com.example.atividadeavaliativa1.user.Activity_login"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>