<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.atividadeavaliativa1.CadastroEventoActivity">

    <EditText
        android:id="@+id/et_eventoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
        android:ems="10"
        android:hint="@string/define_date_event"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_eventoNome" />

    <EditText
        android:id="@+id/et_eventoHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableLeft="@android:drawable/ic_menu_recent_history"
        android:ems="10"
        android:hint="@string/define_hour_event"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_eventoData" />

    <EditText
        android:id="@+id/et_eventoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:ems="10"
        android:hint="@string/title_event"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_eventoHora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/et_eventoEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableLeft="@android:drawable/ic_menu_mylocation"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_eventoHora" />

    <Button
        android:id="@+id/btn_cadastroEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/et_eventoNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_eventoDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_eventoEndereco" />

    <EditText
        android:id="@+id/et_eventoContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableLeft="@drawable/baseline_alternate_email_24"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/contact"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_eventoDescricao" />

    <EditText
        android:id="@+id/et_eventoContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/nameCont"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_eventoContact" />

    <ImageView
        android:id="@+id/fecharCadastroEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/close_event_register"
        android:onClick="fecharTela"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>