<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/textViewDiaDaSemana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDiaNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewDiaNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_day"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:id="@+id/textViewMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="15dp" />

    <TextView
        android:id="@+id/textViewHorarioEvento"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="509dp"
        android:text="@string/hour_event"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDiaNum" />

    <TextView
        android:id="@+id/textViewTituloEvento"
        android:layout_width="338dp"
        android:layout_height="19dp"
        android:layout_marginTop="84dp"
        android:text="@string/title_event"
        app:layout_constraintBottom_toTopOf="@+id/textViewDescricaoEvento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewHorarioEvento"
        app:layout_constraintTop_toBottomOf="@+id/textViewMes" />

    <TextView
        android:id="@+id/textViewDescricaoEvento"
        android:layout_width="338dp"
        android:layout_height="19dp"
        android:layout_marginBottom="509dp"
        android:text="@string/description_event"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewHorarioEvento" />
</androidx.constraintlayout.widget.ConstraintLayout>