<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.Activity_cadastro">

    <ImageView
        android:id="@+id/button_close_cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="344dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="63dp"
        android:contentDescription="@string/close_event_register"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/register"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="160dp"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="280dp"
        android:drawableLeft="@drawable/baseline_password_24"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userId"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="216dp"
        android:drawableLeft="@drawable/baseline_alternate_email_24"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="340dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="btnLogin"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>